--- a/rime/weasel.custom.yaml
+++ b/rime/weasel.custom.yaml
@@ -541,3 +541,30 @@ patch:
       candidate_shadow_color: 0x00000000
       prevpage_color: 0xF9D78D
       nextpage_color: 0xF9D78D
+
+    zhuzhupink:
+      name: 猪猪粉红黄
+      author: knat
+      back_color: 0xEFD3B3
+      shadow_color: 0x44000000
+      border_color: 0x703C49
+      text_color: 0x703C49
+      hilited_text_color: 0x703C49
+      hilited_back_color: 0x8BCCEF
+      hilited_shadow_color: 0x00000000
+      hilited_mark_color: 0x8BCCEF
+      hilited_label_color: 0x703C49
+      hilited_candidate_text_color: 0x703C49
+      hilited_comment_text_color: 0x8BCCEF
+      hilited_candidate_back_color: 0xA092F0
+      hilited_candidate_border_color: 0x87000000
+      hilited_candidate_shadow_color: 0x3E000000
+      label_color: 0x703C49
+      candidate_text_color: 0x703C49
+      comment_text_color: 0x7862E5
+      candidate_back_color: 0x8BCCEF
+      candidate_border_color: 0x9B000000
+      candidate_shadow_color: 0x30000000
+      prevpage_color: 0x64000000
+      nextpage_color: 0x61000000
+
