--- a/rime/zzdyx_mod.dict.yaml
+++ b/rime/zzdyx_mod.dict.yaml
@@ -11052,9 +11052,9 @@ bilibili	blbl
 炊具	cmjo
 瞠目结舌	cmjs
 触目皆是	cmjs
-怵目惊心	cmjx
 曾经	cmjx
 触目惊心	cmjx
+怵目惊心	cmjx
 彩金	cmjy
 采矿	cmka
 差可	cmkf
@@ -17065,6 +17065,7 @@ bilibili	blbl
 大开大合	dkdh
 打电话	dkdh
 打吊针	dkdi
+打倒	dkdj
 担当	dkdj
 抵挡	dkdk
 担待	dkdk
@@ -17221,9 +17222,8 @@ bilibili	blbl
 打开	dkkg
 打卡机	dkkj
 打孔机	dkkj
-抵扣	dkkk
 抵抗	dkkk
-搭扣	dkkk
+抵扣	dkkk
 抵抗力	dkkl
 待客	dkkn
 打瞌睡	dkks
@@ -51488,7 +51488,6 @@ GPRS	gprs
 记者站	jlii
 记者证	jlii
 鸡爪子	jlii
-积累资金	jlij
 记住	jlij
 计征	jlik
 谲诈	jlil
@@ -117111,7 +117110,6 @@ QQ密码	qqmm
 四万	sows
 兕	soww
 山外	soww
-四维	sowx
 思维	sowx
 思想	soxc
 山系	soxe
@@ -139634,9 +139632,9 @@ Z	vyz
 心里头	xllt
 谢了	xllv
 写论文	xllw
+训练	xllx
 心理学	xllx
 心连心	xllx
-训练	xllx
 小鹿乱撞	xllz
 心力	xllz
 心理战	xllz
@@ -142495,7 +142493,6 @@ Z	vyz
 鲜有	xwya
 夏威夷群岛	xwyd
 虚位以待	xwyd
-系于	xwyg
 鲜艳	xwyg
 夕阳红	xwyh
 相忘于江湖	xwyh
