--- a/rime/zzdyx_mod.dict.yaml
+++ b/rime/zzdyx_mod.dict.yaml
@@ -51157,7 +51157,7 @@ GPRS	gprs
 接拍	jkpk
 捡破烂	jkpl
 拒赔	jkpo
-进口品牌	jkpp
+接盘	jkpq
 揭牌	jkpr
 艰苦朴素	jkps
 挤破头	jkpt
@@ -115659,16 +115659,15 @@ QQ密码	qqmm
 识时务	slsw
 诗书	slsx
 说书	slsx
-顺利实现	slsx
 圣上	slsy
 诜	slt
 神态	slta
 毵	sltc
-生理特点	sltd
 神童	slth
 视听	slti
-圣堂	sltj
 沙里淘金	sltj
+圣堂	sltj
+圣体	sltj
 神探	sltk
 试探	sltk
 神通	sltl
