--- a/rime/zzdyx_mod.dict.yaml
+++ b/rime/zzdyx_mod.dict.yaml
@@ -28224,9 +28224,8 @@ bilibili	blbl
 恭维	gfwx
 古文字	gfwz
 官方网站	gfwz
-过夏	gfxa
-共享版	gfxb
 工信部	gfxb
+共享版	gfxb
 更想	gfxc
 工宣队	gfxd
 工薪	gfxe
@@ -40194,7 +40193,7 @@ GPRS	gprs
 直爽	ifsa
 正式版	ifsb
 直属	ifsb
-再生产	ifsc
+枣树	ifsc
 载	ifsd
 再世	ifsf
 正事	ifsf
@@ -43826,8 +43825,8 @@ GPRS	gprs
 则将	iojh
 中奖者	ioji
 中继站	ioji
-中介	iojj
 中间	iojj
+中介	iojj
 中街	iojk
 中计	iojl
 中举	iojn
@@ -53447,8 +53446,8 @@ GPRS	gprs
 皆能	jsnl
 较难	jsnl
 几十年如一日	jsnr
-妓女	jsns
 娇嫩	jsns
+妓女	jsns
 劫数难逃	jsnt
 姐	jso
 姐	jsod
@@ -55808,9 +55807,9 @@ GPRS	gprs
 钜献	jyxf
 锦西	jyxf
 经营性质	jyxi
+镜像	jyxj
 金像	jyxj
 金像奖	jyxj
-镜像	jyxj
 经营许可	jyxk
 金星	jyxr
 镜匣	jyxs
@@ -83546,10 +83545,10 @@ GPRS	gprs
 跩	oioe
 躝	oiof
 啯	oiog
+哦哦	oioi
 吊	oioi
 呷	oioi
 呻	oioi
-哦哦	oioi
 喎	oioi
 喦	oioi
 單	oioi
@@ -101644,11 +101643,11 @@ GPRS	gprs
 烹龙炮凤	plpf
 评聘	plpf
 批林批孔	plpk
+翩翩	plpl
+评评理	plpl
 劈里啪啦	plpl
 噼哩啪啦	plpl
 噼里啪啦	plpl
-翩翩	plpl
-评评理	plpl
 评判	plpm
 跑来跑去	plpq
 飘来飘去	plpq
@@ -103991,10 +103990,10 @@ GPRS	gprs
 清平乐	qdpy
 漆皮	qdpz
 汽枪	qdqc
-千岛群岛	qdqd
+清清	qdqd
 浅浅	qdqd
 清浅	qdqd
-清清	qdqd
+千岛群岛	qdqd
 清癯	qdqh
 漆器	qdqi
 全党全军	qdqj
@@ -112293,9 +112292,9 @@ QQ密码	qqmm
 湿巾	sdjo
 水晶	sdjr
 水晶体	sdjt
-水解	sdjw
-水饺	sdjw
 涉及	sdjw
+水饺	sdjw
+水解	sdjw
 声东击西	sdjx
 沙金	sdjy
 水经注	sdjz
@@ -112322,10 +112321,10 @@ QQ密码	qqmm
 水灵	sdlb
 水萝卜	sdlb
 沈	sdlc
-水帘洞	sdld
-水流	sdld
 沙漏	sdld
 渗漏	sdld
+水帘洞	sdld
+水流	sdld
 洒落	sdle
 深蓝	sdle
 势单力孤	sdlg
@@ -112507,8 +112506,9 @@ QQ密码	qqmm
 水太深	sdts
 沙特	sdtt
 渗透	sdtt
-水土	sdtu
 水塘	sdtu
+水塔	sdtu
+水土	sdtu
 洒脱	sdtv
 水獭	sdtw
 渗透性	sdtx
@@ -115231,9 +115231,9 @@ QQ密码	qqmm
 双胞胎	slbt
 说不清	slbu
 桑巴	slbv
-上梁不正下梁歪	slbw
-桑巴舞	slbw
 设备	slbw
+桑巴舞	slbw
+上梁不正下梁歪	slbw
 十里八乡	slbx
 双保险	slbx
 十里不同音	slby
@@ -118704,7 +118704,6 @@ QQ密码	qqmm
 生物电	stwd
 缩头乌龟	stwg
 失望	stwh
-生态文化	stwh
 生物钟	stwi
 歃	stwj
 生物界	stwj
@@ -122377,6 +122376,7 @@ QQ密码	qqmm
 停机库	tjjk
 途径	tjjk
 团结就是力量	tjjl
+偷家	tjjn
 他家	tjjn
 倘	tjjo
 停机坪	tjjp
@@ -129580,8 +129580,8 @@ QQ密码	qqmm
 轻率	ussh
 七十九	ussj
 轻伤	ussj
-七十六	ussl
 轻视	ussl
+七十六	ussl
 翘首	ussm
 切实	ussn
 七岁	usso
@@ -129754,8 +129754,8 @@ QQ密码	qqmm
 秋冬季	utdj
 气垫	utdk
 缺德	utdk
-抢滩登陆	utdl
 签订	utdl
+抢滩登陆	utdl
 签单	utdm
 签定	utdn
 缺电	utdo
@@ -136879,8 +136879,8 @@ Z	vyz
 相异	xcyb
 小菜一碟	xcyd
 想要	xcyf
-校友会	xcyh
 相应	xcyh
+校友会	xcyh
 相一致	xcyi
 相依	xcyj
 相拥	xcyk
@@ -140773,8 +140773,8 @@ Z	vyz
 小脾气	xppu
 小胖	xppv
 小品文	xppw
-小便宜	xppy
 小朋友	xppy
+小便宜	xppy
 小强	xpqb
 小桥	xpqc
 小汽车	xpqc
@@ -143467,9 +143467,9 @@ Z	vyz
 研究	yajn
 压惊	yajn
 愿景	yajr
-研究室	yajs
-研究所	yajs
 研究生	yajs
+研究所	yajs
+研究室	yajs
 原籍	yajt
 有机体	yajt
 压境	yaju
@@ -147108,10 +147108,10 @@ Z	vyz
 佯装	yjih
 一家之主	yjii
 欲加之罪	yjii
-一己之见	yjij
-仰仗	yjij
-依仗	yjij
 阈值	yjij
+依仗	yjij
+仰仗	yjij
+一己之见	yjij
 饮鸠止渴	yjik
 一己之力	yjil
 倚着	yjim
