--- a/rime/zzdyx_mod.dict.yaml
+++ b/rime/zzdyx_mod.dict.yaml
@@ -21326,6 +21326,7 @@ bilibili	blbl
 二线	egxx
 二选一	egxy
 二营	egye
+二月份	egyf
 二元	egyg
 二亿	egyj
 二元论	egyl
@@ -116014,8 +116015,9 @@ QQ密码	qqmm
 山岳	soyr
 四言诗	soys
 瞬移	soyt
-山腰	soyv
 岁月	soyv
+四月	soyv
+山腰	soyv
 睡在	soza
 山寨版	sozb
 山楂	sozc
@@ -117117,6 +117119,7 @@ QQ密码	qqmm
 身首异处	ssyc
 生杀予夺	ssyd
 输液	ssyd
+十一月份	ssyf
 始于	ssyg
 生死与共	ssyg
 生死攸关	ssyg
@@ -143493,6 +143496,7 @@ Z	vyz
 一夜情	ydyu
 渔业	ydyu
 演艺圈	ydyu
+一月	ydyv
 一隅	ydyv
 沿用	ydyw
 演绎	ydyx
