--- a/rime/zzdyx_mod.dict.yaml
+++ b/rime/zzdyx_mod.dict.yaml
@@ -32608,7 +32608,7 @@ GPRS	gprs
 核计	hcjl
 横截面	hcjm
 桁架	hcjn
-槐角	hcjw
+槲寄生	hcjs
 桁架	hcjz
 桁	hck
 祸从口出	hckc
@@ -114254,10 +114254,10 @@ QQ密码	qqmm
 试卷	sljm
 视觉	sljn
 视界	sljo
-桑寄生	sljs
 试计师	sljs
 试计所	sljs
 试金石	sljs
+桑寄生	sljs
 社稷	sljt
 神经痛	sljt
 神经肽	sljt
