20240601-043003：二字词对比c字已完成。

--- a/rime/zzdyx_mod.dict.yaml
+++ b/rime/zzdyx_mod.dict.yaml
@@ -10698,10 +10698,10 @@ bilibili	blbl
 初一	clyd
 参演	clyd
 翠玉	clyg
-参议会	clyh
-衬衣	clyh
 诚意	clyh
+衬衣	clyh
 谗言	clyh
+参议会	clyh
 参与者	clyi
 参阅	clyj
 词语	clyl
@@ -10843,8 +10843,8 @@ bilibili	blbl
 采购员	cmgy
 粹	cmh
 出谋划策	cmhc
-彩画	cmhd
 粗活	cmhd
+彩画	cmhd
 曾获	cmhe
 粹	cmhf
 粗豪	cmhh
@@ -10986,10 +10986,10 @@ bilibili	blbl
 城门失火	cmsh
 粗率	cmsh
 采桑子	cmsi
+粗俗	cmsj
 差使	cmsj
 慈善家	cmsj
 沉默是金	cmsj
-粗俗	cmsj
 瓻	cmsk
 曾说	cmsl
 粗饲料	cmsl
@@ -11047,8 +11047,8 @@ bilibili	blbl
 采信	cmxj
 采撷	cmxk
 慈祥	cmxl
-慈禧	cmxl
 粗心	cmxl
+慈禧	cmxl
 财迷心窍	cmxq
 采血	cmxr
 粗线条	cmxt
@@ -11057,40 +11057,35 @@ bilibili	blbl
 粗纤维	cmxw
 粗细	cmxx
 焯	cmy
-彩页	cmya
-曾有	cmya
 粗硬	cmya
-差一步	cmyb
+彩页	cmya
 差异	cmyb
+差一步	cmyb
 策马扬鞭	cmyb
 采样	cmyc
 差一点	cmyd
-曾一度	cmyd
 采油	cmyd
 采药	cmye
 焯	cmyf
 单于	cmyg
 彩云	cmyg
-曾于	cmyg
 粗言	cmyh
 粗哑	cmyi
 差役	cmyk
 曾以	cmyl
-彩釉	cmym
 曾用名	cmym
 炊烟	cmym
-曾因	cmyo
+彩釉	cmym
 粗野	cmyo
+曾因	cmyo
 焯	cmyr
-曾与	cmys
 聪明一世	cmys
 粗盐	cmyu
-彩印	cmyw
-曾用	cmyw
 采用	cmyw
+彩印	cmyw
 差异性	cmyx
-柴米油盐	cmyy
 炒鱿鱼	cmyy
+柴米油盐	cmyy
 臭名远扬	cmyy
 曾在	cmza
 曾遭	cmzf
@@ -11130,7 +11125,6 @@ bilibili	blbl
 惨白	cnbr
 穿不透	cnbt
 常年不懈	cnbx
-穿便装	cnbz
 窗边	cnbz
 怵	cnc
 穿成	cnca
@@ -11138,8 +11132,8 @@ bilibili	blbl
 穿插	cnck
 惆怅	cncn
 穿刺术	cncs
-憷	cncv
 窜出	cncv
+憷	cncv
 惨淡	cndd
 穿戴	cndf
 惨毒	cndg
@@ -11160,16 +11154,14 @@ bilibili	blbl
 窜改	cngb
 穿过	cngf
 憧	cnh
-察哈尔	cnhe
 窗花	cnhe
+察哈尔	cnhe
 悴	cnhf
 窗户纸	cnhi
 悴	cnhj
 春暖花开	cnhk
-穿换	cnhk
-忏悔录	cnhl
-惨祸	cnhl
 窗户	cnhl
+惨祸	cnhl
 忏悔	cnhn
 憧	cnho
 穿好	cnhs
@@ -11190,9 +11182,9 @@ bilibili	blbl
 惨剧	cnjb
 穿甲弹	cnjd
 窜进	cnjg
-惝	cnji
 惨叫	cnji
 陈年旧账	cnji
+惝	cnji
 憧憬	cnjn
 穿甲	cnjo
 惨景	cnjr
@@ -11409,9 +11401,9 @@ bilibili	blbl
 串门儿	come
 嵯	comf
 虫媒花	comh
-串门子	comi
 虫鸣	comi
 蝉鸣	comi
+串门子	comi
 串门	comj
 串谋	coml
 财迷	comm
@@ -11448,8 +11440,8 @@ bilibili	blbl
 财神爷	cosy
 瞅	cot
 畅听	coti
-畅谈	cotl
 畅通	cotl
+畅谈	cotl
 瞅	cotm
 蝉蜕	coto
 财团	coto
@@ -11904,8 +11896,8 @@ bilibili	blbl
 传说中的	csid
 处世之道	csid
 车载	csif
-车主	csih
 车站	csih
+车主	csih
 车震	csih
 从始至终	csii
 垂死挣扎	csii
@@ -12067,14 +12059,13 @@ bilibili	blbl
 传说中的	cszd
 处世之道	cszd
 车载	cszf
-车主	cszh
 车站	cszh
+车主	cszh
 车震	cszh
 乘胜追击	cszj
 车中	cszo
 车照	cszr
 车轴	cszs
-车种	cszt
 车长	cszt
 车子	cszv
 处世哲学	cszx
@@ -12097,8 +12088,8 @@ bilibili	blbl
 筹备组	ctbi
 草台班子	ctbi
 辞别	ctbi
-重拨	ctbk
 重播	ctbk
+重拨	ctbk
 丑态毕露	ctbl
 筹办	ctbn
 寸土不让	ctbr
@@ -12211,18 +12202,18 @@ bilibili	blbl
 策展	ctib
 长治	ctid
 辞藻	ctie
-垂直	ctif
 辞职	ctif
+垂直	ctif
 呈堂证供	ctig
 重奏	ctig
-筹资	ctih
 重装	ctih
+筹资	ctih
 出庭作证	ctii
-长足	ctii
 乘坐	ctij
+称作	ctij
+长住	ctij
 重振	ctik
 从头再来	ctil
-称之	ctil
 乘着	ctim
 重置	ctio
 出头之日	ctir
@@ -12231,9 +12222,9 @@ bilibili	blbl
 重走	ctiu
 掣肘	ctiv
 称之为	ctiw
-垂直线	ctix
 辞职信	ctix
 重组	ctix
+垂直线	ctix
 矬	ctj
 筹建	ctjb
 乘机	ctjc
@@ -12395,7 +12386,6 @@ bilibili	blbl
 长强	ctub
 长途汽车	ctuc
 长清	ctud
-称其	ctuf
 长期	ctuf
 垂青	ctug
 重庆	ctuh
@@ -12773,8 +12763,8 @@ bilibili	blbl
 赪	cuyj
 长期以来	cuyl
 超音速	cuys
-城垣	cuyu
 超越	cuyu
+城垣	cuyu
 场院	cuyv
 超验	cuyx
 藏巧于拙	cuyz
@@ -12856,20 +12846,14 @@ bilibili	blbl
 丞	cvdd
 出动	cvdg
 除痘	cvdh
-出点子	cvdi
 承当	cvdj
-承德	cvdk
 承担	cvdk
+承德	cvdk
 出对	cvdl
 出兑	cvdm
 出道	cvdm
 出典	cvdo
-承担起	cvdq
-丑的	cvdr
-承担起	cvdu
 陈独秀	cvdx
-出点	cvdy
-出点子	cvdz
 丑恶	cvef
 承恩	cveo
 出发地	cvfd
@@ -12891,7 +12875,6 @@ bilibili	blbl
 出港	cvgd
 出工	cvgf
 出更	cvgf
-出过	cvgf
 陈规	cvgg
 肠梗阻	cvgi
 出阁	cvgj
@@ -12942,9 +12925,8 @@ bilibili	blbl
 除皱	cviw
 出主意	cviy
 除	cvj
-出尽	cvjb
-出局	cvjb
 承建	cvjb
+出局	cvjb
 陈酒	cvjd
 出警	cvje
 出击	cvjg
@@ -12985,7 +12967,6 @@ bilibili	blbl
 腠理	cvlg
 陈列馆	cvlg
 出来	cvlh
-出露	cvlh
 出乱子	cvli
 出路	cvli
 出料口	cvlk
@@ -13120,8 +13101,8 @@ bilibili	blbl
 出齐	cvuh
 出勤率	cvul
 陈请	cvul
-出拳	cvum
 出糗	cvum
+出拳	cvum
 陈情	cvun
 出圈	cvuo
 除权日	cvur
@@ -13140,8 +13121,8 @@ bilibili	blbl
 出位	cvwj
 出外景	cvwj
 肠胃	cvwo
-出外	cvww
 除外	cvww
+出外	cvww
 脆	cvwx
 承袭	cvxa
 丞相	cvxc
@@ -13426,9 +13407,9 @@ bilibili	blbl
 储蓄存款	cxck
 纯粹	cxcm
 辰戌丑未	cxcw
-纯粹性	cxcx
-纯纯	cxcx
 驰骋	cxcx
+纯纯	cxcx
+纯粹性	cxcx
 诚心诚意	cxcy
 层见叠出	cxdc
 从小到大	cxdd
@@ -13437,7 +13418,6 @@ bilibili	blbl
 绸带	cxdf
 纯度	cxdh
 捶胸顿足	cxdi
-程序代码	cxdm
 缠斗	cxdn
 长吁短叹	cxdt
 绸缎	cxdx
@@ -13820,9 +13800,9 @@ bilibili	blbl
 寸有所长	cysc
 尺有所短，寸有所长	cysc
 尺有所短	cysd
-此世	cysf
-此事	cysf
 错事	cysf
+此事	cysf
+此世	cysf
 常言说得好	cysh
 穿越时空	cysk
 此说	cysl
@@ -13831,11 +13811,8 @@ bilibili	blbl
 此时	cysr
 此一时彼一时	cyss
 此一时，彼一时	cyss
-此生	cyst
-采育失调	cyst
 错失	cyst
-此书	cysx
-词义缩小	cysx
+此生	cyst
 锤	cyt
 餐厅	cyta
 锸	cytd
