--- a/rime/weasel.custom.yaml
+++ b/rime/weasel.custom.yaml
@@ -542,29 +542,55 @@ patch:
       prevpage_color: 0xF9D78D
       nextpage_color: 0xF9D78D
 
-    zhuzhupink:
-      name: 猪猪粉红黄
+    neonlight:
+      name: 霓虹灯光 
+      author: knat
+      back_color: 0xA6000000
+      shadow_color: 0x3D000000
+      border_color: 0x24FAA1
+      text_color: 0x24FAA1
+      hilited_text_color: 0x24FAA1
+      hilited_back_color: 0x006C602D
+      hilited_shadow_color: 0x00000000
+      hilited_mark_color: 0x36E0FD
+      hilited_label_color: 0xFEFF18
+      hilited_candidate_text_color: 0xFEFF18
+      hilited_comment_text_color: 0xFEFF18
+      hilited_candidate_back_color: 0x8799F623
+      hilited_candidate_border_color: 0xFEFF18
+      hilited_candidate_shadow_color: 0x00000000
+      label_color: 0xFF49FE
+      candidate_text_color: 0xFF49FE
+      comment_text_color: 0xFF49FE
+      candidate_back_color: 0x00000000
+      candidate_border_color: 0x00000000
+      candidate_shadow_color: 0x00000000
+      prevpage_color: 0x24FAA1
+      nextpage_color: 0x24FAA1
+
+    zhuzhupinkRYB:
+      name: 粉猪红黄蓝
       author: knat
       back_color: 0xEFD3B3
-      shadow_color: 0x44000000
-      border_color: 0x703C49
-      text_color: 0x703C49
-      hilited_text_color: 0x703C49
-      hilited_back_color: 0x8BCCEF
+      shadow_color: 0x70000000
+      border_color: 0x723D46
+      text_color: 0x723D46
+      hilited_text_color: 0x723D46
+      hilited_back_color: 0xF9EBDE
       hilited_shadow_color: 0x00000000
-      hilited_mark_color: 0x8BCCEF
-      hilited_label_color: 0x703C49
-      hilited_candidate_text_color: 0x703C49
-      hilited_comment_text_color: 0x8BCCEF
-      hilited_candidate_back_color: 0xA092F0
-      hilited_candidate_border_color: 0x87000000
-      hilited_candidate_shadow_color: 0x3E000000
-      label_color: 0x703C49
-      candidate_text_color: 0x703C49
-      comment_text_color: 0x7862E5
-      candidate_back_color: 0x8BCCEF
-      candidate_border_color: 0x9B000000
-      candidate_shadow_color: 0x30000000
-      prevpage_color: 0x64000000
-      nextpage_color: 0x61000000
+      hilited_mark_color: 0x7863E4
+      hilited_label_color: 0x7863E4
+      hilited_candidate_text_color: 0x7863E4
+      hilited_comment_text_color: 0x7863E4
+      hilited_candidate_back_color: 0x87CCF1
+      hilited_candidate_border_color: 0xB3723D46
+      hilited_candidate_shadow_color: 0x4C000000
+      label_color: 0x723D46
+      candidate_text_color: 0x723D46
+      comment_text_color: 0x723D46
+      candidate_back_color: 0x00000000
+      candidate_border_color: 0x00000000
+      candidate_shadow_color: 0x00000000
+      prevpage_color: 0xE7723D46
+      nextpage_color: 0xE7723D46
 
