--- a/rime/zzdyx_mod.dict.yaml
+++ b/rime/zzdyx_mod.dict.yaml
@@ -8143,8 +8143,8 @@ bilibili	blbl
 测控	cdkk
 沉	cdl
 沈	cdlc
-沉沦	cdld
 潮流	cdld
+沉沦	cdld
 澄	cdld
 潮落	cdle
 喘得厉害	cdlh
@@ -10141,9 +10141,9 @@ bilibili	blbl
 扯谎	ckhl
 抄后路	ckhl
 插话	ckhl
-搐	ckho
-摛	ckho
 撤回	ckho
+摛	ckho
+搐	ckho
 摧毁	ckhr
 插好	ckhs
 扯后腿	ckht
@@ -10626,6 +10626,7 @@ bilibili	blbl
 叉烧包	clsb
 叉树	clsc
 参赛队	clsd
+叉烧饭	clsf
 参事	clsf
 初三	clsg
 初始化	clsh
@@ -10635,6 +10636,7 @@ bilibili	blbl
 衬衫	clsl
 褚遂良	clsl
 参数	clsm
+叉烧	clsm
 诚实	clsn
 参赛	clsn
 初赛	clsn
@@ -14180,7 +14182,7 @@ bilibili	blbl
 大件	dajj
 大结局	dajj
 大街	dajk
-大计	dajl
+大军	dajl
 大家	dajn
 大惊	dajn
 大舅	dajr
@@ -19300,6 +19302,7 @@ bilibili	blbl
 短期内	dtqn
 第七	dtqs
 短缺	dtqt
+氮气	dtqt
 迭起	dtqu
 答腔	dtqv
 第七章	dtqz
@@ -19359,6 +19362,7 @@ bilibili	blbl
 短期内	dtun
 第七	dtus
 短缺	dtut
+氮气	dtut
 迭起	dtuu
 答腔	dtuv
 氡	dtw
@@ -27384,8 +27388,8 @@ bilibili	blbl
 歌唱	gfci
 共创	gfcj
 歌唱家	gfcj
-工程量	gfcl
 歌词	gfcl
+工程量	gfcl
 古刹	gfcm
 更惨	gfcn
 古船	gfcq
@@ -29998,6 +30002,7 @@ bilibili	blbl
 官衔	gnxk
 惯性力	gnxl
 惯性	gnxn
+官宣	gnxn
 惯	gnxo
 怪笑	gnxt
 怪象	gnxw
@@ -30128,6 +30133,7 @@ bilibili	blbl
 固话	gohl
 购回	goho
 刚好	gohs
+蛊惑	gohs
 崞	gohv
 贵在	goia
 果汁	goid
@@ -30305,6 +30311,7 @@ bilibili	blbl
 刚巧	gouf
 国球	goug
 国庆	gouh
+国旗	gouh
 国企	gouj
 国庆节	gouj
 岗前	goum
@@ -34561,6 +34568,7 @@ GPRS	gprs
 化妆师	hjis
 合作社	hjis
 合租	hjit
+会长	hjit
 会址	hjiu
 盒子	hjiv
 合纵	hjix
@@ -34596,7 +34604,6 @@ GPRS	gprs
 化开	hjkg
 何况	hjkh
 会看	hjkk
-回家看看	hjkk
 会客	hjkn
 会客室	hjks
 会客厅	hjkt
@@ -34605,8 +34612,8 @@ GPRS	gprs
 合龙	hjla
 华丽	hjld
 含泪	hjld
-华罗庚	hjlg
 合理	hjlg
+华罗庚	hjlg
 化疗	hjlh
 合理化	hjlh
 阖闾	hjlj
@@ -34687,9 +34694,10 @@ GPRS	gprs
 挥金如土	hjrt
 化石	hjsa
 辉石	hjsa
-华师大	hjsd
 华沙	hjsd
 华盛顿	hjsd
+华氏度	hjsd
+℉	hjsd
 伙食费	hjsf
 何事	hjsf
 华商	hjsh
@@ -34862,6 +34870,7 @@ GPRS	gprs
 化妆师	hjzs
 合作社	hjzs
 合租	hjzt
+会长	hjzt
 会址	hjzu
 盒子	hjzv
 合纵	hjzx
@@ -35020,7 +35029,7 @@ GPRS	gprs
 衡量	hklr
 挥	hkls
 很乱	hklt
-换了	hklv
+换脸	hklv
 护理员	hkly
 很没	hkmd
 护目镜	hkmj
@@ -35393,6 +35402,7 @@ GPRS	gprs
 火把	hmbk
 火爆	hmbm
 烘焙	hmbm
+火并	hmbm
 火暴	hmbr
 昏迷不醒	hmbx
 火柴棒	hmcb
@@ -42394,8 +42404,8 @@ GPRS	gprs
 祉	ilyd
 之药	ilye
 之于	ilyg
-之意	ilyh
 证言	ilyh
+之意	ilyh
 之余	ilyj
 祯	ilyj
 之谊	ilyl
@@ -47774,6 +47784,7 @@ GPRS	gprs
 酒劲	jdjl
 酒精	jdjm
 酒驾	jdjn
+酒家	jdjn
 洁具	jdjo
 激进派	jdjp
 渐近	jdjq
@@ -49143,10 +49154,10 @@ GPRS	gprs
 交织	jhix
 决战	jhiy
 疥	jhj
-交接班	jhjb
 京剧	jhjb
-交界处	jhjc
+交接班	jhjb
 竞技场	jhjc
+交界处	jhjc
 酒后驾车	jhjc
 交警队	jhjd
 京津	jhjd
@@ -49561,12 +49572,14 @@ GPRS	gprs
 君子固穷	jigu
 跤	jih
 蹴	jiha
+叫花	jihe
 卷帙浩繁	jihf
 叫魂	jihg
 叫唤	jihi
 叫喊	jihi
 叫花子	jihi
 旧货	jihj
+叫花鸡	jihj
 跤	jihk
 旧话	jihl
 嗟乎	jihm
@@ -50708,8 +50721,8 @@ GPRS	gprs
 讲到	jlds
 劲敌	jldt
 军地	jldu
-军队	jldv
 鸡蛋	jldv
+军队	jldv
 计量单位	jldw
 吉林大学	jldx
 军大衣	jldy
@@ -53020,8 +53033,8 @@ GPRS	gprs
 交头接耳	jtje
 季节	jtje
 积聚	jtjf
-矫健	jtjj
 简介	jtjj
+矫健	jtjj
 简捷	jtjk
 季军	jtjl
 简	jtjr
@@ -53789,8 +53802,8 @@ GPRS	gprs
 几滴	jwdd
 系带	jwdf
 解毒	jwdg
-°	jwdh
 角度	jwdh
+°	jwdh
 几丁质	jwdi
 几点钟	jwdi
 急跌	jwdi
@@ -54604,18 +54617,15 @@ GPRS	gprs
 纠	jxv
 纠	jxvv
 绝	jxw
-吉凶未卜	jxwb
 结尾	jxwb
-继续维持	jxwc
+吉凶未卜	jxwb
 经纬度	jxwd
 绝无	jxwg
 绝望	jxwh
-锦绣文章	jxwi
 驹	jxwi
 继位	jxwj
 继往	jxwk
 结为	jxwm
-降下帷幕	jxwm
 结网	jxwo
 绛	jxws
 纪委	jxwt
@@ -59479,7 +59489,6 @@ GPRS	gprs
 立等可取	ldkq
 流口水	ldks
 立等可取	ldku
-朗读课文	ldkw
 利多卡因	ldky
 浪	ldl
 练达老成	ldlc
@@ -59488,16 +59497,14 @@ GPRS	gprs
 沦落	ldle
 流浪儿	ldle
 流落	ldle
-来电来函	ldlh
 流浪汉	ldlh
 流露	ldlh
 洛伦兹	ldli
 流浪者	ldli
 流量计	ldlj
 浪	ldlk
-领导力量	ldll
+来都来了	ldll
 浏览器	ldlq
-垄断利润	ldlr
 流量	ldlr
 流连	ldls
 洛丽塔	ldlt
@@ -60833,6 +60840,7 @@ GPRS	gprs
 廉江	lhjd
 斓	lhjf
 冷静	lhjg
+雷击	lhjg
 痢疾	lhjh
 辣酱	lhjh
 恋旧	lhji
@@ -65075,9 +65083,8 @@ GPRS	gprs
 木鸡	mcjl
 买家	mcjn
 枚举	mcjn
-梦见	mcjo
 模具	mcjo
-名词解释	mcjs
+梦见	mcjo
 木匠	mcjs
 木简	mcjt
 梦境	mcju
@@ -65775,6 +65782,7 @@ GPRS	gprs
 摩尔斯码	mesm
 蒙受	mesm
 墓室	mesn
+茅山	meso
 蒙山	meso
 萌生	mest
 暮色	mesw
@@ -69880,10 +69888,10 @@ GPRS	gprs
 难分高下	nfgx
 南瓜子	nfgz
 南瓜粥	nfgz
-南汇	nfhd
 南海	nfhd
-南淮	nfhd
 南湖	nfhd
+南淮	nfhd
+南汇	nfhd
 南韩	nfhf
 南华	nfhj
 酿祸	nfhl
@@ -71206,6 +71214,7 @@ GPRS	gprs
 蝻	nofo
 内啡肽	noft
 内附	nofv
+内服	nofv
 内风	nofw
 内功	nogf
 内阁制	nogi
@@ -91782,9 +91791,9 @@ GPRS	gprs
 娯	osib
 欧洲杯	osib
 嬠	osic
+欧洲	osid
 彧	osid
 或	osid
-欧洲	osid
 辑	osif
 娱	osig
 戜	osig
@@ -92277,8 +92286,8 @@ GPRS	gprs
 郅	osvv
 郪	osvv
 郾	osvv
-匹	osw
 欧	osw
+匹	osw
 殴	osw
 比	osw
 轨	osw
@@ -99523,8 +99532,8 @@ GPRS	gprs
 配药	pfye
 飘雨	pfyf
 飘云	pfyg
-浦发银行	pfyh
 配音	pfyh
+浦发银行	pfyh
 匹夫有责	pfyi
 聘用制	pfyi
 飘悠	pfyj
@@ -99766,7 +99775,6 @@ GPRS	gprs
 疲软	phrs
 平壤	phru
 庞然	phrv
-庞然	phrw
 烹饪	phrw
 平素	phsg
 平伸	phsj
@@ -108986,6 +108994,7 @@ QQ密码	qqmm
 肉丁	rodf
 蠕动	rodg
 肉店	rodh
+肉冻	rodh
 肉豆蔻	rodk
 肉盾	rodq
 肉蛋	rodv
@@ -113747,8 +113756,8 @@ QQ密码	qqmm
 誓死	sksa
 绳捆索绑	sksb
 手术	sksc
-手术刀	sksd
 摄氏度	sksd
+手术刀	sksd
 搜索	sksf
 逝世	sksf
 手速	sksf
@@ -115945,7 +115954,6 @@ QQ密码	qqmm
 少看	spkk
 省科委	spkw
 少林	splc
-审批流程	splc
 省略号	splh
 少来	splh
 省略句	splj
@@ -115954,9 +115962,8 @@ QQ密码	qqmm
 省略	splo
 撕破脸皮	splp
 少量	splr
-塞浦路斯	spls
 少林寺	spls
-商品流通	splt
+塞浦路斯	spls
 帅了	splv
 省力	splz
 师门	spmj
@@ -130174,6 +130181,8 @@ Z	vyz
 豌豆	wddd
 温带	wddf
 温度	wddh
+℃	wddh
+℉	wddh
 温度计	wddj
 温带大陆	wddl
 污	wdds
@@ -130706,11 +130715,11 @@ Z	vyz
 玩儿	wgew
 温故而知新	wgex
 无纺布	wgfb
-违法	wgfd
+无法	wgfd
 玩法	wgfd
+违法	wgfd
 五谷丰登	wgfd
 王法	wgfd
-无法	wgfd
 王菲	wgfe
 武夫	wgfg
 外感风寒	wgfh
@@ -135421,18 +135430,14 @@ Z	vyz
 渲染	xdrd
 泄热	xdrk
 涎	xdrl
-相当热闹	xdrn
 澙	xdrs
 泫然	xdrv
 泫然	xdrw
 洗刷	xdsb
 洗漱	xdsd
-消失点	xdsd
-溪水	xdsd
 潇洒	xdsd
-相对湿度	xdsd
+溪水	xdsd
 消散	xdsf
-小的时候	xdsh
 消瘦	xdsh
 消石灰	xdsh
 洗手间	xdsj
@@ -139886,8 +139891,8 @@ Z	vyz
 箫	xtb
 先不	xtba
 香饽饽	xtbb
-笑柄	xtbc
 香槟	xtbc
+笑柄	xtbc
 先头部队	xtbd
 香波	xtbd
 稀薄	xtbe
@@ -140049,8 +140054,8 @@ Z	vyz
 秀丽	xtld
 先来	xtlh
 先例	xtlj
-稀烂	xtlm
 笑料	xtlm
+稀烂	xtlm
 香料	xtlm
 箱笼	xtlt
 笑脸	xtlv
@@ -143740,6 +143745,7 @@ Z	vyz
 酝	yfgl
 永放光芒	yfgm
 要官	yfgn
+硬刚	yfgo
 雨果	yfgo
 雨刮器	yfgq
 研发公司	yfgs
@@ -146040,6 +146046,7 @@ Z	vyz
 又在	ylia
 雅鲁藏布	ylib
 预制板	ylib
+预制菜	yljc
 夜郎自大	ylid
 译注	ylid
 译著	ylie
@@ -146048,18 +146055,17 @@ Z	vyz
 以利再战	ylii
 意料之中	ylii
 雅鲁藏布江	ylij
-一路走来	ylil
 预祝	ylil
-又怎么	ylim
 预兆	ylim
 意料之内	ylin
 预置	ylio
 译制片	ylip
 叶落知秋	yliq
 以至	ylis
+预制	ylit
+预知	ylit
 译制	ylit
 语种	ylit
-预知	ylit
 叶落知秋	yliu
 意料之外	yliw
 一览众山小	ylix
@@ -146200,10 +146206,10 @@ Z	vyz
 谒	ylr
 羽绒服	ylrf
 又如何	ylrh
-夜阑人静	ylrj
 诱人	ylrj
-谀	ylrk
+夜阑人静	ylrj
 预热	ylrk
+谀	ylrk
 翌日	ylrr
 又如	ylrs
 引狼入室	ylrs
@@ -146290,14 +146296,15 @@ Z	vyz
 冤	ylw
 冤枉	ylwc
 鹬	ylwd
-勇武	ylwg
 永无	ylwg
-以邻为壑	ylwh
+勇武	ylwg
 语文	ylwh
+以邻为壑	ylwh
 甬	ylwi
 又问	ylwj
-语文课	ylwk
+以往	ylwk
 豫	ylwk
+语文课	ylwk
 云里雾里	ylwl
 冤枉路	ylwl
 以为	ylwm
@@ -146305,7 +146312,6 @@ Z	vyz
 冤枉钱	ylwq
 以为然	ylwr
 诣	ylwr
-医疗卫生	ylws
 冤枉钱	ylwu
 允	ylww
 扅	ylww
@@ -146385,6 +146391,7 @@ Z	vyz
 又在	ylza
 雅鲁藏布	ylzb
 预制板	ylzb
+预制菜	ylzb
 夜郎自大	ylzd
 译注	ylzd
 译著	ylze
@@ -146401,9 +146408,10 @@ Z	vyz
 译制片	ylzp
 叶落知秋	ylzq
 以至	ylzs
+预制	ylzt
+预知	ylzt
 译制	ylzt
 语种	ylzt
-预知	ylzt
 叶落知秋	ylzu
 意料之外	ylzw
 一览众山小	ylzx
@@ -149387,9 +149395,9 @@ Z	vyz
 乐章	ywih
 印章	ywih
 用足	ywii
-永无止境	ywij
-用作	ywij
 鱼子酱	ywij
+用作	ywij
+永无止境	ywij
 印证	ywil
 英文字母	ywim
 迎着	ywim
