20240601-175817：补充多个词汇和调序。

--- a/rime/zzdyx_mod.dict.yaml
+++ b/rime/zzdyx_mod.dict.yaml
@@ -4854,8 +4854,8 @@ bilibili	blbl
 办班	bnbg
 不能保证	bnbi
 办报	bnbk
-不男不女	bnbn
 宝宝	bnbn
+不男不女	bnbn
 宝贝	bnbo
 百年不遇	bnby
 不能保证	bnbz
@@ -19034,6 +19034,7 @@ bilibili	blbl
 顿然	dsrw
 到死	dssa
 东施	dssh
+嫡庶	dssh
 到时候	dssh
 到手	dssk
 顿首	dssm
@@ -22166,8 +22167,8 @@ bilibili	blbl
 副社长	fdsz
 副厅	fdta
 浮屠	fdtb
-法塔赫	fdth
 法庭	fdth
+法塔赫	fdth
 副团长	fdti
 副厅级	fdtj
 法帖	fdto
@@ -25702,8 +25703,8 @@ bilibili	blbl
 风俗	fwsj
 风势	fwsk
 风湿科	fwsk
-凡士林	fwsl
 风扇	fwsl
+凡士林	fwsl
 负数	fwsm
 凤山	fwso
 凡是	fwsr
@@ -27713,10 +27714,10 @@ bilibili	blbl
 工伤	gfsj
 工商局	gfsj
 工商界	gfsj
-哥萨克	gfsk
-攻势	gfsk
 歌手	gfsk
+攻势	gfsk
 过手	gfsk
+哥萨克	gfsk
 共识	gfsl
 古诗	gfsl
 工商联	gfsl
@@ -31898,6 +31899,7 @@ GPRS	gprs
 肝阳化风	gyhf
 镐	gyhi
 钙化	gyhj
+钢化膜	gyhm
 镐	gyho
 过氧化氢	gyhq
 官运亨通	gyht
@@ -40063,9 +40065,9 @@ GPRS	gprs
 趾高气扬	igqy
 责任感	igrg
 责任制	igri
-专人	igrj
-中国人民解放军	igrj
 责任	igrj
+中国人民解放军	igrj
+专人	igrj
 中国人民	igrm
 赘肉	igro
 责任心	igrx
@@ -44838,9 +44840,9 @@ GPRS	gprs
 赞助商	itis
 制造	itit
 朱自清	itiu
-智障	itiv
 种子	itiv
 竹子	itiv
+智障	itiv
 种猪	itiw
 造纸	itix
 制止	itiy
@@ -56395,8 +56397,8 @@ GPRS	gprs
 开小灶	kgxi
 考古学家	kgxj
 刊行	kgxk
-亏心	kgxl
 开心	kgxl
+亏心	kgxl
 开学	kgxn
 开向	kgxr
 亏心事	kgxs
@@ -56788,7 +56790,6 @@ GPRS	gprs
 口误	kiwl
 控制污染	kiwr
 枯燥无味	kiww
-开展宣传	kixc
 口型	kixg
 叩响	kixi
 口信	kixj
@@ -59678,8 +59679,8 @@ GPRS	gprs
 滤	ldy
 利大于弊	ldyb
 泸	ldyb
-涟漪	ldyd
 淋浴	ldyd
+涟漪	ldyd
 流萤	ldye
 漏雨	ldyf
 领导有方	ldyf
@@ -61146,10 +61147,9 @@ GPRS	gprs
 离异	lhyb
 旅游车	lhyc
 来一场	lhyc
-六·一	lhyd
 旅游	lhyd
-旅游点	lhyd
 来源	lhyd
+六·一	lhyd
 露营	lhye
 六月份	lhyf
 雷雨	lhyf
@@ -67215,8 +67215,8 @@ GPRS	gprs
 美景	mmjr
 迷奸	mmjs
 美籍	mmjt
-煤焦油	mmjy
 美金	mmjy
+煤焦油	mmjy
 美加	mmjz
 米	mmk
 煤矿	mmka
@@ -68207,6 +68207,7 @@ GPRS	gprs
 毛病	mtbh
 毛笔字	mtbi
 毛边纸	mtbi
+毛玻璃	mtbl
 每半	mtbm
 毛边	mtbn
 毛笔	mtbt
@@ -68349,9 +68350,9 @@ GPRS	gprs
 每秒钟	mtmi
 每门	mtmj
 每米	mtmm
-没头没脑	mtmn
 秘密	mtmn
 闷头闷脑	mtmn
+没头没脑	mtmn
 每秒	mtmt
 没头没尾	mtmw
 牧马	mtmx
@@ -68588,8 +68589,10 @@ GPRS	gprs
 孟德	mvdk
 陌	mvdr
 孟冬	mvdw
+膜	mve
 朦	mve
 朦	mveg
+膜	mver
 脉浮紧	mvfj
 眉峰	mvfo
 孟菲斯	mvfs
@@ -99448,8 +99451,9 @@ GPRS	gprs
 飘零	pflh
 剽掠	pflk
 聘礼	pfll
-平方厘米	pflm
 配料	pflm
+平方厘米	pflm
+㎠	pflm
 票面	pfma
 飘渺	pfmd
 酦	pfnl
@@ -113343,23 +113347,22 @@ QQ密码	qqmm
 食宿费	sjsf
 食素	sjsg
 身兼数职	sjsi
-伸伸	sjsj
+闪闪	sjsj
 傻傻	sjsj
 耸耸肩	sjsj
-闪闪	sjsj
 伸手	sjsk
 色即是空	sjsk
 赏识	sjsl
 闪烁	sjsm
 食宿	sjsn
 佘山	sjso
-神经衰弱	sjsr
 舍身	sjsr
 闪身	sjsr
+神经衰弱	sjsr
 舒适	sjst
 所见所闻	sjsw
 伸缩	sjsx
-伸缩性	sjsx
+尚书	sjsx
 身兼数职	sjsz
 伤	sjt
 俗套	sjta
@@ -113527,9 +113530,9 @@ QQ密码	qqmm
 手冲	skch
 搜查证	skci
 擅闯	skcj
-手抄	skck
 手持	skck
 撕扯	skck
+手抄	skck
 手戳	skcl
 搜查令	skcl
 誓词	skcl
@@ -126339,6 +126342,7 @@ QQ密码	qqmm
 倾覆	ujff
 俅	ujfk
 穷家富路	ujfl
+全军覆没	ujfm
 全反射	ujfs
 侵犯	ujfw
 全方位	ujfw
@@ -135133,10 +135137,10 @@ Z	vyz
 心潮起伏	xcuf
 现场气氛	xcuf
 相求	xcuf
-校庆	xcuh
 相亲	xcuh
-想请	xcul
+校庆	xcuh
 相劝	xcul
+想请	xcul
 现场确认	xcur
 相切	xcus
 想起	xcuu
@@ -135146,7 +135150,6 @@ Z	vyz
 想歪	xcwa
 校尉	xcwb
 想玩	xcwg
-相吻合	xcwg
 檄文	xcwh
 相吻合	xcwh
 相望	xcwh
@@ -136018,9 +136021,9 @@ Z	vyz
 下体	xftj
 下台阶	xftj
 下探	xftk
-下调	xftl
 协调	xftl
-幸福甜蜜	xftm
+下调	xftl
+下台	xftl
 下头	xftn
 下图	xfto
 协同	xfto
@@ -138349,7 +138352,6 @@ Z	vyz
 宣传画	xnch
 学唱	xnci
 宣传周	xnci
-学年成绩	xncj
 宣传	xncj
 宣传科	xnck
 宣传品	xncp
@@ -143293,8 +143295,8 @@ Z	vyz
 泳衣	ydyh
 浴衣	ydyh
 游园会	ydyh
-一阳指	ydyi
 演员	ydyi
+一阳指	ydyi
 演艺界	ydyj
 一夜间	ydyj
 液压机	ydyj
@@ -144747,8 +144749,8 @@ Z	vyz
 亦算	yhst
 应声	yhsu
 应收	yhsv
-夜色	yhsw
 颜色	yhsw
+夜色	yhsw
 韵书	yhsx
 旖	yht
 意态	yhta
@@ -146614,9 +146616,8 @@ Z	vyz
 游牧民族	ymmz
 遥	ymn
 榆木脑袋	ymnd
-伊曼纽尔	ymne
 炀	ymne
-一名男子	ymni
+伊曼纽尔	ymne
 欲念	ymnj
 以马内利	ymnl
 烟农	ymnl
@@ -146626,7 +146627,6 @@ Z	vyz
 养牛	ymnt
 益鸟	ymnw
 亚美尼亚	ymny
-一名男子	ymnz
 益	ymo
 釉	ymod
 一马平川	ympc
@@ -147706,6 +147706,7 @@ Z	vyz
 岳桦林	yrhl
 易患	yrho
 延后	yrhq
+影后	yrhq
 延胡索	yrhs
 延缓	yrhx
 映红	yrhx
@@ -147904,8 +147905,8 @@ Z	vyz
 粤语	yryl
 一人一票	yryp
 影业	yryu
-岳阳	yryv
 影院	yryv
+岳阳	yryv
 影印	yryw
 嫣然一笑	yryx
 游刃有余	yryy
@@ -148933,6 +148934,7 @@ Z	vyz
 院发	yvfn
 阴阜	yvfr
 腰	yvfs
+腰封	yvfu
 阴风	yvfw
 也非	yvfy
 院发	yvfz
